added openapi configurator endpoints
